Fix space panel name overflowing (#6995)

--- a/res/css/structures/_SpacePanel.scss
+++ b/res/css/structures/_SpacePanel.scss
@@ -144,6 +144,7 @@ $activeBorderColor: $secondary-content;
             align-items: center;
             border-radius: 12px;
             padding: 4px;
+            width: 100%;
         }
 
         .mx_SpaceButton_name {
